Add TIP general assets

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,2 +1,4 @@
 ['remote "invited-talks"']
     url = gdrive://1cvRsVAkSW-mrFe2aQQN90TX9cIJjL0tL
+['remote "geamtip-gdrive"']
+    url = gdrive://1mdVkXVpqvbhLu_dgjToplNB0RdzYzMYw
