DVC add remote: stochastic-things

--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     url = gdrive://1cvRsVAkSW-mrFe2aQQN90TX9cIJjL0tL
 ['remote "cwa-geamtip"']
     url = gdrive://1JDpkeqtwZPmOGV_yTWVu0rRHh4q-khx-
+['remote "stochastic-things"']
+    url = gdrive://11Nw2rfaT-qXYJZ7x8vDFuDTy_5Q9hgsY
