Add figures of Chen 2018

--- a/cwa-geamtip/LiteratureReview/.gitignore
+++ b/cwa-geamtip/LiteratureReview/.gitignore
@@ -6,3 +6,7 @@
 /Yen2004.jpg
 /Fig_1_Novelo-Casanova1992.png
 /Fig_3_Novelo-Casanova1992.png
+/Chen2018_Fig12_SchematicTIP3D.png
+/Chen2018_Fig10_SchematicTIP1Db.png
+/Chen2018_Fig11_MolchanDiagram.png
+/Chen2018_Fig10_SchematicTIPa.png
